crates/pack/tests/compile_fail/proposed_fact_try_into_fact.stderr
error[E0277]: the trait bound `ContextFact: TryFrom<ProposedFact>` is not satisfied
  --> tests/compile_fail/proposed_fact_try_into_fact.rs:14:30
   |
14 |     let _fact: ContextFact = ContextFact::try_from(proposal).unwrap();
   |                              ^^^^^^^^^^^ the trait `From<ProposedFact>` is not implemented for `ContextFact`
   |
   = note: required for `ProposedFact` to implement `Into<ContextFact>`
   = note: required for `ContextFact` to implement `TryFrom<ProposedFact>`

error[E0277]: the trait bound `ContextFact: From<ProposedFact>` is not satisfied
  --> tests/compile_fail/proposed_fact_try_into_fact.rs:14:30
   |
14 |     let _fact: ContextFact = ContextFact::try_from(proposal).unwrap();
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `From<ProposedFact>` is not implemented for `ContextFact`
   |
   = note: required for `ProposedFact` to implement `Into<ContextFact>`
   = note: required for `ContextFact` to implement `TryFrom<ProposedFact>`
